views/css/creator.css
                                  /* /  \ |    | --:'''':--
THIS CODE IS GENERATED          :*_* : _:"":\___
AUTOMAGICALLY    * *      ____.' :::     '._ *=====<<=)           \    :
DO NOT EDIT!     * *      '-'-'\_      /'._.' \====:_ "" .'     \ :       : /   :    \ :   .      '. :  : :      : :__:-:__.;--' <*_/   <*/
#test-creator .test-creator-items ul.item-box li:hover:after, #test-creator .test-creator-items ul.item-box li.selected:after { content: "\e60f"; }

#test-creator .test-creator-props h1:before { content: "\e61d"; }

#test-creator .test-creator-test .itemrefs-wrapper .itemref-placeholder:before { content: "\e636"; }

#test-creator .test-creator-items h1:before { content: "\e640"; }

#test-creator .test-creator-test > h1:before { content: "\e641"; }

#test-creator { position: relative; min-height: 550px; height: auto; }
#test-creator .test-creator-toolbar { position: relative; height: 50px; background-color: #D4D5D7; color: #222; }
@media only screen and (max-width: 1024px) { #test-creator .test-creator-toolbar { padding-left: 250px; } }
@media only screen and (min-width: 1025px) and (max-width: 1280px) { #test-creator .test-creator-toolbar { padding-left: 300px; } }
@media only screen and (min-width: 1281px) { #test-creator .test-creator-toolbar { padding-left: 350px; } }
#test-creator .test-creator-toolbar .logo { position: absolute; left: 10px; top: 0; height: 50px; overflow: hidden; background: url("../img/test-creator.png") no-repeat left; }
@media only screen and (max-width: 1024px) { #test-creator .test-creator-toolbar .logo { width: 250px; } }
@media only screen and (min-width: 1025px) and (max-width: 1280px) { #test-creator .test-creator-toolbar .logo { width: 300px; } }
@media only screen and (min-width: 1281px) { #test-creator .test-creator-toolbar .logo { width: 350px; } }
#test-creator .test-creator-toolbar > ul { height: 50px; }
#test-creator .test-creator-toolbar > ul li { float: left; height: 50px; position: relative; padding: 12px 20px 0 20px; line-height: 1.2; text-align: center; font-size: 12px; font-size: 1.2rem; }
#test-creator .test-creator-toolbar > ul li [class^="icon-"], #test-creator .test-creator-toolbar > ul li [class*=" icon-"] { display: block; font-size: 20px; font-size: 2rem; color: #6f6359; }
#test-creator .test-creator-toolbar > ul li:hover { cursor: pointer; color: white; background-color: #ba122b; }
#test-creator .test-creator-toolbar > ul li:hover [class^="icon-"], #test-creator .test-creator-toolbar > ul li:hover [class*=" icon-"] { cursor: pointer; color: white; background-color: #ba122b; }
#test-creator .test-creator-toolbar > ul li.disabled { background-color: inherit; }
#test-creator .test-creator-toolbar > ul li.disabled [class^="icon-"], #test-creator .test-creator-toolbar > ul li.disabled [class*=" icon-"] { background-color: inherit; cursor: not-allowed; color: #6f6359; }
#test-creator .test-creator-sidebar { background-color: #f2f0ee; color: #222; }
#test-creator .test-creator-items { position: relative; display: table-cell; vertical-align: top; min-height: 500px; height: auto !important; border-right: 1px #ddd solid; }
@media only screen and (max-width: 1024px) { #test-creator .test-creator-items { width: 250px; } }
@media only screen and (min-width: 1025px) and (max-width: 1280px) { #test-creator .test-creator-items { width: 300px; } }
@media only screen and (min-width: 1281px) { #test-creator .test-creator-items { width: 350px; } }
#test-creator .test-creator-items h1 { font-size: 14px; font-size: 1.4rem; line-height: 1.6; background-color: #D4D5D7; color: #222; margin-top: 1px; padding: 5px; height: 38px; }
@media only screen and (max-width: 1024px) { #test-creator .test-creator-items h1 { width: 250px; } }
@media only screen and (min-width: 1025px) and (max-width: 1280px) { #test-creator .test-creator-items h1 { width: 300px; } }
@media only screen and (min-width: 1281px) { #test-creator .test-creator-items h1 { width: 350px; } }
#test-creator .test-creator-items h1:before { font-family: 'tao'; display: inline-block; font-size: 16px; font-size: 1.6rem; line-height: 1.6; margin-right: 3px; }
#test-creator .test-creator-items .item-selection { margin: 6px; }
#test-creator .test-creator-items input { margin-bottom: 10px; }
@media only screen and (max-width: 1024px) { #test-creator .test-creator-items input { width: 230px; } }
@media only screen and (min-width: 1025px) and (max-width: 1280px) { #test-creator .test-creator-items input { width: 280px; } }
@media only screen and (min-width: 1281px) { #test-creator .test-creator-items input { width: 330px; } }
#test-creator .test-creator-items ul.item-box li { position: relative; padding: 4px; margin: 0; height: 40px; line-height: 1.2; background-color: white; border-top: solid 1px #ddd; border-left: solid 1px #ddd; border-right: solid 1px #ddd; text-overflow: ellipsis; }
@media only screen and (max-width: 1024px) { #test-creator .test-creator-items ul.item-box li { padding-right: 62.5px; } }
@media only screen and (min-width: 1025px) and (max-width: 1280px) { #test-creator .test-creator-items ul.item-box li { padding-right: 75px; } }
@media only screen and (min-width: 1281px) { #test-creator .test-creator-items ul.item-box li { padding-right: 87.5px; } }
#test-creator .test-creator-items ul.item-box li:last-child { border-bottom: solid 1px #ddd; }
#test-creator .test-creator-items ul.item-box li .flag { text-overflow: ellipsis; position: absolute; right: 0; bottom: 0; padding: 0 3px; height: 16px; background-color: #0e5d91; color: white; -webkit-border-top-left-radius: 2px; -moz-border-radius-topleft: 2px; border-top-left-radius: 2px; }
@media only screen and (max-width: 1024px) { #test-creator .test-creator-items ul.item-box li .flag { max-width: 62.5px; } }
@media only screen and (min-width: 1025px) and (max-width: 1280px) { #test-creator .test-creator-items ul.item-box li .flag { max-width: 75px; } }
/* ... */

